[package]
name = "timescaledb-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "*"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.38", features = ["full"] }

[target.'cfg(unix)'.dependencies]
termion = "4.0"

[dev-dependencies]
tokio = { version = "1.38", features = ["fs", "rt-multi-thread", "macros"] }
